[project]
name = "logging_handler"
version = "1.0.7"
description = "Python Library to quickly create logging handlers"
authors = [{name = "Thomas Dunteman", email= "git@learningtopi.com"}]
keywords = ["logging", "syslog"]
readme = "README.md"
requires-python =">=3.6"
classifiers = [
    "Topic :: System :: Logging",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3"
]
dependencies = []

[project.urls]
"Homepage" = "https://www.learningtopi.com/python-modules-applications/python_logging_handler/"
"Bug Tracker" = "https://github.com/LearningToPi/logging_handler/issues"
"Source Code" = "https://github.com/LearningToPi/logging_handler"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"